--- a/taskerlocaleapi/build.gradle
+++ b/taskerlocaleapi/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "20.0.0"
 
     defaultConfig {
-        applicationId "com.twofortyfouram.locale.api"
+        //applicationId "com.twofortyfouram.locale.api"
         minSdkVersion 3
         targetSdkVersion 17
     }
@@ -16,8 +16,8 @@ android {
 
     buildTypes {
         release {
-            runProguard false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+            minifyEnabled false
+            //proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
 }
